test/langtools/tools/javac/patterns/declarations/InstanceOfStatementErrors.out
InstanceOfStatementErrors.java:20:9: compiler.err.instanceof.statement.pattern.only
InstanceOfStatementErrors.java:12:9: compiler.err.not.exhaustive.statement
2 errors
